charts/maintainerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: maintainerr
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      containers:
      - name: maintainerr
        securityContext:
          runAsUser: 1026
          runAsGroup: 100
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 1Gi
        # renovate: datasource=docker depName=ghcr.io/maintainerr/maintainerr
        image: ghcr.io/maintainerr/maintainerr:3.30.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6246
        volumeMounts:
        - name: maintainerr-config
          mountPath: /config
        - name: arr-media
          mountPath: /opt/data
      volumes:
        - name: arr-media
          nfs:
            server: 192.168.100.250
            path: /volume1/media
        - name: maintainerr-config
          persistentVolumeClaim:
            claimName: maintainerr-config-pvc
