charts/maintainerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintainerr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/host: maintainerr.frost.haus
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - maintainerr.frost.haus
    secretName: maintainerr-cert
  rules:
  - host: maintainerr.frost.haus
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: maintainerr
            port:
              name: http
